clusters/beryjuorg-prd/registry/token/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: registry-token-service
  name: registry-token-service
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: registry-token-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: registry-token-service
    spec:
      containers:
      - image: ghcr.io/beryju/distribution-oauth:latest-1650029276-85634b78759b0271716aca3fc716d586bc64ac37 # {"$imagepolicy": "flux-system:registry-token"}
        name: token-svc
        resources:
          requests:
            memory: 100M
            cpu: 50m
          limits:
            memory: 300M
            cpu: 100m
        ports:
        - containerPort: 9001
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /live
            port: 9001
          initialDelaySeconds: 5
        livenessProbe:
          httpGet:
            path: /live
            port: 9001
          initialDelaySeconds: 5
