clusters/beryjuorg-prd/registry/token/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-token-service
  namespace: registry
  labels:
    app.kubernetes.io/name: registry-token-service
spec:
  clusterIP: None
  ports:
    - name: http
      port: 9001
      targetPort: http
  selector:
    app.kubernetes.io/name: registry-token-service
  type: ClusterIP
