clusters/beryjuorg-prd/registry/token/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-token-service
  namespace: registry
spec:
  ingressClassName: istio
  rules:
    - host: registry.beryju.org
      http:
        paths:
          - backend:
              service:
                name: registry-token-service
                port:
                  number: 9001
            path: /token
            pathType: Prefix
  tls:
    - hosts:
        - registry.beryju.org
      secretName: beryjuorg-gw-registries
